Generation of Balls and Class added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <Title>Billard JavaScript</Title>
         <script src = "p5.js"></script>
+        <script type="text/javascript" src="balls.js"></script>
         <script src = "main.js"></script>
     </head>
     <body>
