Added Basic Utilities for geometry, not sure wether I need theta, will remove in next commit.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
         <Title>Billard JavaScript</Title>
         <script src = "p5.js"></script>
         <script type="text/javascript" src="balls.js"></script>
+        <script type="text/javascript" src="utilities.js"></script>
         <script src = "main.js"></script>
     </head>
     <body>
-        <h1>Test</h1>
+        <h1>Billard in p5js</h1>
     </body>
 </html>
