Optimisation and Commenting

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
     <head>
-        <Title>Billard JavaScript</Title>
+        <Title>Gordon's JavaScript Billard</Title>
         <script src = "p5.js"></script>
         <script type="text/javascript" src="balls.js"></script>
         <script type="text/javascript" src="utilities.js"></script>
         <script src = "main.js"></script>
     </head>
     <body>
-        <h1>Billard in p5js</h1>
+        <h1>Gordon's JavaScript Billard</h1>
     </body>
 </html>
